--- a/portfolio.html
+++ b/portfolio.html
@@ -25,22 +25,23 @@
       <h1>Portfolio</h1>
 
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Word Guess">
+          <h3>Crystal Collector</h3>
+        <a href="https://ja32183.github.io/unit-4-game/">Crystal Collector</a>
 
-        <h3>Word Guess</h3>
+        <h3>Events Finder</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+        <a href="https://mbgeiger.github.io/Project1/">Events Finder</a>
 
-        <h3>RPG Game</h3>
+        <h3>Ticket system</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
+        <a href="https://warm-shore-89729.herokuapp.com/">Ticket system</a>
 
-        <h3>Trivia Game</h3>
+        <h3>Giftastic</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
+        <a href="https://ja32183.github.io/GifTastic/">Giftastic</a>
 
         <h3>Rutgers Info Widget</h3>
       </div>
