--- a/assets/index.html
+++ b/assets/index.html
@@ -6,7 +6,7 @@
   <title>About | Jeff Amlani</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-  <link rel="stylesheet" type="text/css" href="assets/style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
@@ -25,10 +25,10 @@
                       <a class="nav-link" href="#">About<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="assets/portfolio.html">Portfolio</a>
+                      <a class="nav-link" href="portfolio.html">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="assets/contact.html">Contact</a>
+                      <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                   </ul>
                 </div>
