--- a/assets/portfolio.html
+++ b/assets/portfolio.html
@@ -11,9 +11,9 @@
 
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Your Name</a>
+      <a href="index.html" id="logo">Jeff Amlani</a>
       <nav>
-        <a href="index.html">About</a>
+        <a href="/Users/jeffamlani/github2/Bootstrap-Portfolio/index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="contact.html">Contact</a>
       </nav>
