--- a/assets/contact.html
+++ b/assets/contact.html
@@ -13,7 +13,7 @@
     <div class="container">
       <a href="index.html" id="logo">Jeff Amlani</a>
       <nav>
-        <a href="index.html">About</a>
+        <a href="/Users/jeffamlani/github2/Bootstrap-Portfolio/index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="contact.html">Contact</a>
       </nav>
