--- a/assets/portfolio.html
+++ b/assets/portfolio.html
@@ -24,7 +24,6 @@
     <section class="main-section">
       <h1>Portfolio</h1>
 
-      <div class="work">
 
         <h3>Github profile</h3>
         <a href="https://github.com/ja32183">Github profile</a>
@@ -47,8 +46,10 @@
         <h3>Train-scheduler</h3>
         <a href= "https://ja32183.github.io/Train-Scheduler/">Train-Scheduler</a>
 
+        <h3>Liri Bot</h3>
+        <a href= "https://github.com/ja32183/liri-node-app">Liri Bot</a>
       
-      </div>
+      
     </section>
 
   </div>
