--- a/assets/portfolio.html
+++ b/assets/portfolio.html
@@ -48,6 +48,9 @@
 
         <h3>Liri Bot</h3>
         <a href= "https://github.com/ja32183/liri-node-app">Liri Bot</a>
+
+        <h3>Constructor word guess</h3>
+        <a href="https://github.com/ja32183/Constructor-word-guess">Constructor-word-guess</a>
       
       
     </section>
